Fix issue  - whitespace delete  - button radius fix

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,7 +33,7 @@
   --border: rgb(238, 238, 238);
 }
 
-$border-radius: 5px;
+$border-radius: 50px;
 
 .click-btn {
   display: flex;
